# FTGen

./: .gitignore  BUILD-MAC.md  CLAUDE.md  TEAMPLAY-generation-ia.md  index.html  package.json  pnpm-lock.yaml  prompt-champs-ia-niveaux.md  prompt-generation-ia-fiche.md  prompt.md  tailwind.config.js  tsconfig.json
.github/workflows/: build-mac.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AiPromptModal.tsx  CheckboxGroup.tsx  ContentImporter.tsx  ExportModal.tsx  MonacoSection.tsx  PdfViewer.tsx  SectionCard.tsx  SectionManager.tsx  SettingsModal.tsx  TemplateSelector.tsx  ToastProvider.tsx
src/components/editor/: ClassificationEditor.tsx  DocumentsPanel.tsx  EditorContent.tsx  EditorSidebar.tsx  EditorToolbar.tsx  MetadataBlock.tsx  StructurePanel.tsx
src/hooks/: useEditorState.ts
src/lib/: ai-latex-guide.ts  ai-schema.ts  ai-system-prompt.ts  editor-types.ts  icons.ts  latex-completion.ts  profiles.ts  snippets.ts  types.ts
src/pages/: EditorPage.tsx  HomePage.tsx  StructureStep.tsx
src/styles/: globals.css
